로그인 관련 처리 수정, 다국어처리 코드 추가, 공지 삭제

--- a/src/resource/properties/msg.properties
+++ b/src/resource/properties/msg.properties
@@ -1,6 +1,16 @@
 lang-none=choice language
 lang-ko=korean
 lang-en=english
+
 hd-login=Login
+hd-logout=Logout
 hd-projects=Projects
 hd-admin=Admin
+
+sb-dashboard=Dashboard
+sb-activity=Activity
+sb-task=Task
+sb-gantt-chart=Gantt Chart
+sb-calendar=Calendar
+sb-risk=Risk
+sb-project-setting=Project Setting
