--- a/src/resource/properties/msg.properties
+++ b/src/resource/properties/msg.properties
@@ -36,3 +36,26 @@ dash-chart-done=Done
 all=All
 task=Task
 risk=Risk
+
+risk-insert=Insert
+risk-id=ID
+risk-subject=Subject
+risk-projectname=ProjectName
+risk-status=Status
+risk-category=Category
+risk-probability=Probability
+risk-impact=Impact
+risk-accountname=AccountName
+risk-startdate=ExpectStartDate
+risk-enddate=ExpectEndDate
+risk-updated=UpdatedDate
+risk-unlikely=Unlikely
+risk-low=Low
+risk-medium=Medium
+risk-high=High
+risk-expected=Expected
+risk-negligible=Negligible
+risk-minor=Minor
+risk-moderate=Moderate
+risk-significant=Significant
+risk-severe=Severe
