다국어, 작업내역

--- a/src/resource/properties/msg.properties
+++ b/src/resource/properties/msg.properties
@@ -57,6 +57,16 @@ dash-member-done-ratio=Done Ratio
 all=All
 task=Task
 risk=Risk
+activity=Activity
+project-select=Project Select
+d_type_select=Type Select
+ac_type=Activity Type
+ac_list=Activity List
+ac_no=ID
+ac_content=Content
+ac_writer=Writer
+ac_date=Updated Date
+ac_setting=Click
 
 risk-insert=Insert
 risk-id=ID
