--- a/src/resource/properties/msg.properties
+++ b/src/resource/properties/msg.properties
@@ -58,9 +58,9 @@ ac_all=All
 ac_task=Task
 ac_risk=Risk
 activity=Activity
-ac_project-select=Project Select
-d_type_select=Type Select
-ac_type=Activity Type
+ac_project-select=Select Project 
+d_type_select=Select Type 
+ac_type=Type
 ac_list=Activity List
 ac_no=ID
 ac_content=Content
