--- a/src/resource/properties/msg.properties
+++ b/src/resource/properties/msg.properties
@@ -58,9 +58,9 @@ ac_all=All
 ac_task=Task
 ac_risk=Risk
 activity=Activity
-ac_project-select=Select Project 
-d_type_select=Select Type 
-ac_type=Type
+ac_project-select=Project Select
+d_type_select=Type Select
+ac_type=Activity Type
 ac_list=Activity List
 ac_no=ID
 ac_content=Content
@@ -126,9 +126,32 @@ u_support=Support
 u_new=New
 u_completed=Completed
 u_progresss=Progress
+u_solve=Solve
+u_opinion=Opinion
+u_reject=Reject
 
 account_login=Login
 account_id=ID
 account_pass=Password
 account_searchpass=Find Password
 account_insert=Sign Up
+
+account_duplication=Duplication 
+account_name=Name
+account_enroll=Enroll
+account_check=Check
+account_email=Email
+account_member_registration=Member Registration
+account_change_pass=Change Password
+account_new_pass=New Pssword
+
+p_search=Search
+p_new-project=New project
+p_checking-project=Checking project
+p_search=Search
+p_name=Project Name
+p_description=Description
+p_identifier=Identifier
+p_homepage=Homepage
+p_new=New
+p_cancel=Cancel
