--- a/src/resource/properties/msg.properties
+++ b/src/resource/properties/msg.properties
@@ -67,6 +67,9 @@ ac_content=Content
 ac_writer=Writer
 ac_date=Updated Date
 ac_setting=Click
+ac_search=Search
+ac_project=Project
+
 
 risk-risk=Risk
 risk-insert=Insert
