--- a/src/resource/properties/msg.properties
+++ b/src/resource/properties/msg.properties
@@ -66,7 +66,7 @@ ac_no=ID
 ac_content=Content
 ac_writer=Writer
 ac_date=Updated Date
-ac_setting=Click
+ac_setting=Search
 ac_search=Search
 ac_project=Project
 
