--- a/src/resource/properties/msg.properties
+++ b/src/resource/properties/msg.properties
@@ -147,6 +147,7 @@ account_email=Email
 account_member_registration=Member Registration
 account_change_pass=Change Password
 account_new_pass=New Password
+account_searchid=Find ID
 
 p_search=Search
 p_new-project=New project
