--- a/src/resource/properties/msg.properties
+++ b/src/resource/properties/msg.properties
@@ -8,7 +8,7 @@ hd-projects=Projects
 hd-admin=Admin
 
 sb-dashboard=Dashboard
-sb-activity=Activity
+sb-activity=Processing History
 sb-task=Task
 sb-gantt-chart=Gantt Chart
 sb-calendar=Calendar
@@ -57,11 +57,11 @@ dash-member-done-ratio=Done Ratio
 ac_all=All
 ac_task=Task
 ac_risk=Risk
-activity=Activity
+activity=Processing History
 ac_project-select=Project Select
 d_type_select=Type Select
-ac_type=Activity Type
-ac_list=Activity List
+ac_type=Type
+ac_list=Processing History List
 ac_no=ID
 ac_content=Content
 ac_writer=Writer
