change_info/ lang

--- a/src/resource/properties/msg.properties
+++ b/src/resource/properties/msg.properties
@@ -135,6 +135,7 @@ u_progresss=Progress
 u_solve=Solve
 u_opinion=Opinion
 u_reject=Reject
+u_change_info=Change Information
 
 account_login=Login
 account_id=ID
