다국어 / 사이드바 / 결재페이지 기본틀

--- a/src/resource/properties/msg.properties
+++ b/src/resource/properties/msg.properties
@@ -14,6 +14,7 @@ sb-gantt-chart=Gantt Chart
 sb-calendar=Calendar
 sb-risk=Risk
 sb-project-setting=Project Setting
+sb-approval=Approval
 
 dash-project-select=Select Project
 dash-info=Info
